--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-solutions/__pycache__
-.idea
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
